<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.app.iagree.ui.homepages.HomeFragmentContainer"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.app.iagree.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.app.iagree.ui.notifications.NotificationFragmentContainer"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.app.iagree.ui.search.SearchFragment"
        android:label="search_fragment"
        tools:layout="@layout/search_fragment" >
        <action
            android:id="@+id/action_navigation_search_to_postDetailsFragment"
            app:destination="@id/postDetailsFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/action_navigation_search_to_searchProfileFragment"
            app:destination="@id/searchProfileFragment"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_close_enter"
            app:popExitAnim="@anim/fragment_close_exit"
            />
    </fragment>
    <fragment
        android:id="@+id/navigation_add"
        android:name="com.app.iagree.ui.add.AddFragment"
        android:label="add_fragment"
        tools:layout="@layout/add_fragment" />
    <fragment
        android:id="@+id/postDetailsFragment"
        android:name="com.app.iagree.PostDetailsFragment"
        android:label="fragment_post_details"
        tools:layout="@layout/fragment_post_details" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.app.iagree.ui.home.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/searchProfileFragment"
        android:name="com.app.iagree.SearchProfileFragment"
        android:label="SearchProfileFragment" />
</navigation>
