<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/r1"
        android:background="@color/bgColor"
        android:elevation="5dp"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/about"
            android:textSize="23sp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            />

        <ImageView
            android:id="@+id/btnBack_about"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_width="30dp"
            android:layout_centerVertical="true"
            android:layout_height="30dp"/>

    </RelativeLayout>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_below="@+id/r1"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:padding="5dp"
            android:id="@+id/privacy_about"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/privacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:padding="5dp"
            android:id="@+id/terms_about"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/termsandconditions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:padding="5dp"
            android:id="@+id/acknw_about"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/t1"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/acknowledgement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>



</RelativeLayout>